Fixing CSS margin which leads to unnecessary scrollbars in RWTH layout

--- a/reports/coursedashboard/static/styles.css
+++ b/reports/coursedashboard/static/styles.css
@@ -1,6 +1,6 @@
 
 .row.reportboxes {
-    margin-bottom: -20px;
+    margin-bottom: -19px;
 }
 .dashboardbox {
     position: relative;
